[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hobo-consolidator"
version = "0.1.0"
description = "HOBO microclimate export consolidator"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.1",
  "openpyxl>=3.1",
  "pyyaml>=6.0",
  "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
description = "Consolidate HOBO exports into one audited workbook"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "openpyxl>=3.1",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
hobo-consolidator = "hobo_consolidator.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
